--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,4 @@ jobs:
           server: 46.202.172.188
           username: u714466871
           password: AlbertPutisimoAmo2! 
-          server-dir: ./
-
-
-#https://udg.albertsanchez.es/public/
+          server-dir: ./domains/albertsanchez.es/public_html
